# toxic_clf_tg_bot

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  init.sh  main.py  pyproject.toml  server.py
docker/bot/: Dockerfile
docker/server/: Dockerfile
handlers/: handlers.py
