[tool.poetry]
name = "toxic-clf-bot"
version = "0.1.0"
description = "Telegram chat-bot for toxicity message classification."
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
